Fix button alignment after adding drag and drop support

--- a/src/shared/set-editor.theme.scss
+++ b/src/shared/set-editor.theme.scss
@@ -5,6 +5,7 @@ $border-default: solid 2px #212121;
 @mixin card-buttons {
     .button-container {
         display: flex;
+        justify-content: end;
         text-align: right;
     
         .info-text {
